--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,21 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">My Application</string>
+    <string name="app_name">MyApplication</string>
+    <string name="brand">AUBE</string>
+    <string name="subtitle">Sistema de Gestão de Vendas</string>
+
+    <string name="label_email">E-mail</string>
+    <string name="hint_email">seu@email.com</string>
+
+    <string name="label_password">Senha</string>
+    <string name="hint_password">********</string>
+
+    <string name="forgot_password">Esqueci minha senha</string>
+    <string name="action_login">Entrar</string>
+    <string name="action_register">Registrar</string>
+    <string name="action_create_account">Criar conta</string>
+    <string name="have_account">Já tenho conta</string>
+
+    <string name="footer">© 2025 Aube. Todos os direitos reservados.</string>
+    <string name="wine_icon_desc">Ícone de taça</string>
 </resources>
