--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -186,4 +186,9 @@
     <string name="error_order_invalid_quantity">Quantidade inválida</string>
     <string name="error_order_stock_unavailable">Sem estoque suficiente</string>
     <string name="action_remove_item">Remover</string>
+
+    <!-- Payment Filters -->
+    <string name="payment_all">Todos</string>
+    <string name="payment_paid">Pagamento Feito</string>
+    <string name="payment_pending">Pagamento Pendente</string>
 </resources>
